tests/machine/x/ex/python_math.error
line 6
    error: undefined variable "math"
    │
  6 │     area = math.pi * math.pow.(@r, 2)
    │            ^^^^
    │
    └─ /workspace/mochi/tests/machine/x/ex/python_math.exs:6:12: Main.main/0

    error: undefined variable "math"
    │
  6 │     area = math.pi * math.pow.(@r, 2)
    │                      ^^^^
    │
    └─ /workspace/mochi/tests/machine/x/ex/python_math.exs:6:22: Main.main/0

    error: undefined variable "math"
    │
  8 │     root = math.sqrt.(49)
    │            ^^^^
    │
    └─ /workspace/mochi/tests/machine/x/ex/python_math.exs:8:12: Main.main/0

    error: undefined variable "math"
    │
 10 │     sin45 = math.sin.(math.pi / 4)
    │             ^^^^
    │
    └─ /workspace/mochi/tests/machine/x/ex/python_math.exs:10:13: Main.main/0

    error: undefined variable "math"
    │
 10 │     sin45 = math.sin.(math.pi / 4)
    │                       ^^^^
    │
    └─ /workspace/mochi/tests/machine/x/ex/python_math.exs:10:23: Main.main/0

    error: undefined variable "math"
    │
 12 │     log_e = math.log.(math.e)
    │             ^^^^
    │
    └─ /workspace/mochi/tests/machine/x/ex/python_math.exs:12:13: Main.main/0

    error: undefined variable "math"
    │
 12 │     log_e = math.log.(math.e)
    │                       ^^^^
    │
    └─ /workspace/mochi/tests/machine/x/ex/python_math.exs:12:23: Main.main/0

** (CompileError) /workspace/mochi/tests/machine/x/ex/python_math.exs: cannot compile module Main (errors have been logged)


  def main do
    # area :: float()
    area = math.pi * math.pow.(@r, 2)
    # root :: float()
    root = math.sqrt.(49)
